--- a/styles/components/product/product-card.css
+++ b/styles/components/product/product-card.css
@@ -8,6 +8,10 @@
     height: 100%;
     filter: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.08));
 
+    @media (min-width: 48em){
+      
+    }
+
     & .product-card-image-box {
         position: relative;
         overflow: hidden;
